Rectified project. Corrected misaligned.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
-body{
-    /* margin: 0;
-    padding: 0; */
+html,body{
     background-color: antiquewhite;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(87, 83, 83);
@@ -8,10 +6,11 @@ body{
 }
 main{
     position: absolute;
-    margin-top: 0;
+    margin-left: 300px;
     margin-bottom: 20px;
-    width: 1100px;
-    min-width: 300px;
+    padding: 20px;
+    /* width: 1100px; */
+    /* min-width: 300px; */
 }
 aside{
     /* position: fixed; */
@@ -21,7 +20,7 @@ aside{
     top: 0;
     left: 0;
     height: 100%;
-    min-width: 290px;
+    /* min-width: 290px; */
 }
 ul{
     list-style: none;
@@ -32,10 +31,10 @@ li{
     padding: 10px 0px;
     border-bottom: 2px solid black;
 }
-section{
+/* section{
     position: relative;
     left: 33%;
-}
+} */
 h1{
     color: black;
 }
